before/Namespace.yaml
apiVersion: app/v1
kind: Namespace
metadata:
  name: nginx-ns
  labels:
    name: nginx-ns-label
