before/Deployment.yaml
apiVersion: app/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: nginx-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-01
  template:
    metadata:
      labels:
        app: nginx-01
    spec:
      containers:
      - name: nginx-01
        image: nginx:1.19
        ports:
        - containerPort: 80
