before/Service.yaml
apiVersion: app/v1
kind: Service
metadata:
  namespace: nginx-ns
  name: nginx-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: web
