before/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
spec:
  rules:
  - host: web.linux.com
    http:
      paths:
      - path: /
        pathType: prefix
        backend:
          service:
            name: web
            port:
              number: 80
